--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ipheth (1.0-6) UNRELEASED; urgency=medium
+
+  * Trim trailing whitespace.
+
+ -- Debian Janitor <janitor@jelmer.uk>  Tue, 28 Apr 2020 18:25:57 +0000
+
 ipheth (1.0-5) unstable; urgency=low
 
   * Remove references to obsolete ipeth-dkms package (Closes: #711684, #872322)
