--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ ipheth (1.0-6) UNRELEASED; urgency=medium
 
   * Trim trailing whitespace.
   * Bump debhelper from deprecated 9 to 12.
+  * Set debhelper-compat version in Build-Depends.
 
  -- Debian Janitor <janitor@jelmer.uk>  Tue, 28 Apr 2020 18:25:57 +0000
 
