--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ ipheth (1.0-6) UNRELEASED; urgency=medium
   * Bump debhelper from deprecated 9 to 12.
   * Set debhelper-compat version in Build-Depends.
   * Change priority extra to priority optional.
+  * Set upstream metadata fields: Repository, Repository-Browse.
 
  -- Debian Janitor <janitor@jelmer.uk>  Tue, 28 Apr 2020 18:25:57 +0000
 
